Fix: add missing @Value allowedOrigins in SecurityConfig